login page sign up page test cases

--- a/app/views/login/sign_up.html.erb
+++ b/app/views/login/sign_up.html.erb
@@ -22,7 +22,7 @@
       <%= form.password_field :password %>
     </div>
     <div class="d-flex flex-column form-control mb-3">
-      <%= form.label :confirm_password %>
+      <%= form.label :confirm_password, "Confirm Passsword" %>
       <%= form.password_field :password_confirmation %>
     </div>
 
