request, repay loan tests, admin login admin loan approval

--- a/app/views/admin/admin_dashboard.html.erb
+++ b/app/views/admin/admin_dashboard.html.erb
@@ -36,7 +36,7 @@
 	<div class="table-listing" >
 		<%if @loans.length != 0%>
 			<h2 class="text-center m-4">Requested Loans</h2>
-			<table class="table container text-center">
+			<table class="admin_view_request_table table container text-center">
 				<thead>
 					<tr>
 					  <th scope="col">User Id</th>
