--- a/app/views/user/user_dashboard.html.erb
+++ b/app/views/user/user_dashboard.html.erb
@@ -43,13 +43,18 @@
 						</div>
 						<div>
 	      				<%= form.submit "Repay", class: "btn btn-primary" %>
+	      				<% if flash[:error].present? %>
+						    <div class="alert alert-danger mt-2">
+						      <strong>Error!</strong> <%= flash[:error] %>
+						    </div>
+						    <%end%>
 						</div>
-
+						</div>
 						<% end %>
-
 					</div>
+
 				</div>
-		</div>
+				
 	</div>
 	<hr>
 	<div class="bottom-container" >
